# cpmpckg_test_app

./: CMakeLists.txt  README.md  cmake-variants.json
src/: main.cpp
